--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Gym Center</title>
-	 <link rel="stylesheet" type="text/css" href="https://github.com/Avinash1286/Gym/tree/master/css.css">
+	 <link rel="stylesheet" type="text/css" href="css/css.css">
 	 <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@600&family=MuseoModerno:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -11,7 +11,7 @@
 <header>
 	
 	<div class="left">
-		<img src="https://github.com/Avinash1286/Gym/blob/master/resources/gymlogo.png">
+		<img src="css/gymlogo.png">
 		<div>Gym Center</div>
 
 	</div>
